2008-09-09  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b40)

	* Fixed issue with copy/paste.

2008-07-31  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b39)

	* Users can select Gallery URLs that GR should automatically
	  log into on startup (thanks Brian Egge).
	* Fixed minor issues with editing image properties and extra fields.

2008-07-07  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b38)

	* No longer loading thumbnails in the slideshow applet.
	* Fixed transitions in special cases in slideshow applet.

2008-03-06  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b37)

	* Moved the shutdown functionality back into the applets. Review 521.

2008-02-13  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b36)

	* Fixed DnD to the album tree.
	* Added support for Summary and Description explicitly (instead of
	  just lumped together as extrafields).
	* The upload applet now supports thumbnails.
	* GR now verifies the signatures of dynamically-loaded classes
	  to prevent unauthorized modifications (applets only)
	* The upload applet now supports setting extra fields (Summary and
	  Description in G2)
	* GR standalone now fetches info about a newly created album so that
	  extra fields can be edited for images added to it
	* More details in upload progress window

2008-02-06  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b35)

	* No longer including the reboot code in the applets (mini and full).
	* The slideshow now aggregates the various overlays that should be
	  displayed in the same location (instead of displaying them on
	  top of each other).
	* The protocol now asks for and parses "extrafields" (summaries and 
	  description).

2007-08-26  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b34)

	* Fixed NPE while drawing the cropped area when using golden section.

2007-08-08  Pierre-Luc Paour <gallery@paour.com> (1.5.1-b33)

	* Added horizontal scrollbar for albums list (thanks Brian Egge).
	* Fixed NPE when User-Agent is not provided by Gallery (thanks Brian Egge).