@@ -50,8 +50,8 @@ MainFrame.cbmenuPreview = Show Preview
 MainFrame.cbmenuPath = Show Path
 MainFrame.newGalleryBtn = Add Gallery URL...
 MainFrame.albumCombo = Select an Album here and add pictures to it. The number in parenthesis after the name of the album is the number of pictures that you've added to it.
-MainFrame.quitQuestion = Quitting will lose all the work you have performed and not yet uploaded. You may want to save first.\u000A\u000AQuit anyway?
-MainFrame.logoutQuestion = Logging out will lose all the work you have performed in gallery {0} and not yet uploaded.\u000A\u000ASave the current state before logging out?
+MainFrame.quitQuestion = Quitting will lose all the work you have performed and not yet uploaded.\u000A\u000AQuit anyway?
+MainFrame.logoutQuestion = Logging out will lose all the work you have performed in gallery {0} and not yet uploaded.\u000A\u000ALog out anyway?
 MainFrame.quitQuestion.title = Warning
 
 
